refactor: revert the revert of the logback conversion (#14198)
Co-authored-by: Cole Snodgrass <cole@airbyte.io>